Complete Phase 2: Comprehensive EDA notebook for fraud detection analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .venv/
 data/
-notebooks/
+notebooks/*.ipynb_checkpoints/
+notebooks/.ipynb_checkpoints/
 __pycache__/
 *.pyc
+*.ipynb_checkpoints/
+.ipynb_checkpoints/
