--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,4 +5,5 @@ numpy>=1.19.3,<2.0
 requests>=2.25.0
 python-dotenv>=1.0.0
 scikit-learn>=1.0.0
-joblib>=1.0.0 
+joblib>=1.0.0
+huggingface_hub==0.23.0 
