--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==2025.6.15
 charset-normalizer==3.4.2
 idna==3.10
-numpy==2.3.1
+numpy==1.26.4
 pandas==2.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -12,3 +12,4 @@ tzdata==2025.2
 urllib3==2.5.0
 scikit-learn==1.5.2
 joblib==1.4.2
+packaging==23.2
